# allegretto

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Allegretto/: Allegretto.sln  Allegretto.vcxproj  Allegretto.vcxproj.filters
Allegretto/assets/config/: allegretto.conf  allegretto.ini
Allegretto/code/: CMakeLists.txt  main.cpp
Allegretto/code/main/: Application.cpp  Application.hpp  Game.cpp  Game.hpp  Pixelator.cpp  Pixelator.hpp
Allegretto/code/utility/: ALDeleter.hpp  ImageAtlas.cpp  ImageAtlas.hpp  dbg_console.cpp  dbg_console.hpp  utils.cpp  utils.hpp
